# darwintd

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  CONTRIBUTING.md  DOCKER_SETUP.md  Dockerfile  FOLDER_STRUCTURE.md  LIBRARY_RESEARCH.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt  test_docker_environment.py  test_library_integration.py  test_vectorbt_integration.py
.github/: pull_request_template.md
src/darwintd/: __init__.py
src/darwintd/analysis/: __init__.py
src/darwintd/backtesting/: __init__.py  vectorbt_engine.py
src/darwintd/config/: __init__.py  settings.py
src/darwintd/evolution/: __init__.py
src/darwintd/orchestration/: __init__.py
src/darwintd/orchestration/backtesting/: bulk_tester.py
src/darwintd/orchestration/pipeline/: v1_basic.py
src/darwintd/quality_evaluation/: __init__.py
src/darwintd/quality_evaluation/technical/: v1_basic.py
src/darwintd/setup_detection/: __init__.py
src/darwintd/setup_detection/fibonacci/: __init__.py  base.py  v1_basic.py  v2_advanced.py
src/darwintd/signals/: __init__.py  base.py
src/darwintd/strategies/: __init__.py
src/darwintd/trade_execution/: __init__.py
src/darwintd/trade_execution/scalping/: v1_basic.py
src/darwintd/trade_execution/swing/: v1_basic.py
src/darwintd/utils/: __init__.py
src/darwintd/visualization/: __init__.py
